# Games101Assignments

./: README.md
Assignment1/code/: CMakeLists.txt  main.cpp
Assignment2/code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
PA6/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  main.cpp
PA7/Assignment7/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
pa0/: CMakeLists.txt  main.cpp
test/: test.cpp
